[gd_scene format=3 uid="uid://bj8ynu8013j4j"]

[ext_resource type="Script" uid="uid://dpo124xwpder5" path="res://addons/konado/scripts/dialogue/knd_dialogue_manager.gd" id="1_buo3n"]
[ext_resource type="Script" uid="uid://cyoedi0x84dxy" path="res://addons/konado/scripts/act/knd_acting_interface.gd" id="2_pq6sw"]
[ext_resource type="Script" uid="uid://b0kbsxqyedoml" path="res://addons/konado/scripts/dialogue/knd_choice_interface.gd" id="3_gl7il"]
[ext_resource type="Script" uid="uid://cfbojxb1pdbrs" path="res://addons/konado/scripts/audio/knd_audio_interface.gd" id="4_gd2ll"]
[ext_resource type="Theme" uid="uid://bb865dga7c5sp" path="res://addons/konado/editor/theme/game_theme.tres" id="4_inqap"]
[ext_resource type="Script" uid="uid://gh6w15d30qe7" path="res://addons/konado/scripts/save_system/save_load_ui.gd" id="4_m5nin"]
[ext_resource type="Script" uid="uid://bh2origtxajo3" path="res://addons/konado/scripts/actionbar/actionbar.gd" id="6_m5nin"]
[ext_resource type="PackedScene" uid="uid://bgpl5q55u0eby" path="res://addons/konado/template/knd_dialogue_box.tscn" id="6_r5ho2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b1osp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h66lv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m5nin"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r5ho2"]

[sub_resource type="Gradient" id="Gradient_w8bt0"]
offsets = PackedFloat32Array(0, 0.996764, 1)
colors = PackedColorArray(0.527091, 0.626497, 0.835147, 0.611765, 0.0801724, 0.0952924, 0.127029, 0.0930516, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_m86f6"]
gradient = SubResource("Gradient_w8bt0")
width = 512
height = 512
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.7, 0.7)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vp4la"]
texture = SubResource("GradientTexture2D_m86f6")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ytbee"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ky1ed"]

[node name="KonadoDialogueManager" type="Control" unique_id=1487339260 node_paths=PackedStringArray("_konado_choice_interface", "_konado_dialogue_box", "_acting_interface", "_audio_interface", "error_tooltip_panel", "error_tooltip_label", "error_skip_btn")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_buo3n")
_konado_choice_interface = NodePath("KonadoUI/DialogueInterface/ChoicesContainer")
_konado_dialogue_box = NodePath("KonadoUI/DialogueInterface/KonadoDialogueBox")
_acting_interface = NodePath("KonadoUI/ActingInterface")
_audio_interface = NodePath("KonadoAudioInterface")
error_tooltip_panel = NodePath("KonadoErrorToolTip")
error_tooltip_label = NodePath("KonadoErrorToolTip/MarginContainer/ErrorText")
error_skip_btn = NodePath("KonadoErrorToolTip/Skip")

[node name="KonadoUI" type="Control" parent="." unique_id=363853147]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActingInterface" type="PanelContainer" parent="KonadoUI" unique_id=580713454]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_b1osp")
script = ExtResource("2_pq6sw")

[node name="BackgroundLayer" type="ColorRect" parent="KonadoUI/ActingInterface" unique_id=1466239429]
material = SubResource("ShaderMaterial_h66lv")
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="CharaControl" type="Control" parent="KonadoUI/ActingInterface/BackgroundLayer" unique_id=245679010]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EffectLayer" type="ColorRect" parent="KonadoUI/ActingInterface" unique_id=1654107269]
layout_mode = 2
color = Color(0, 0, 0, 0)

[node name="DialogueInterface" type="Control" parent="KonadoUI" unique_id=254950114]
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="KonadoDialogueBox" parent="KonadoUI/DialogueInterface" unique_id=1215106161 instance=ExtResource("6_r5ho2")]
layout_mode = 1
offset_top = 600.0
offset_bottom = -40.0

[node name="ChoicesContainer" type="VBoxContainer" parent="KonadoUI/DialogueInterface" unique_id=256738057 node_paths=PackedStringArray("_choice_container")]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_right = 200.0
offset_bottom = -166.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60
alignment = 1
script = ExtResource("3_gl7il")
_choice_container = NodePath(".")

[node name="ActionButtons" type="Panel" parent="KonadoUI/DialogueInterface" unique_id=787754962]
custom_minimum_size = Vector2(0, 55)
layout_mode = 0
offset_top = 1025.0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_vertical = 8
theme = ExtResource("4_inqap")
metadata/_edit_group_ = true

[node name="ActionsContainer" type="HBoxContainer" parent="KonadoUI/DialogueInterface/ActionButtons" unique_id=1423528034 node_paths=PackedStringArray("continue_btn", "replay_btn", "save_btn", "load_btn", "record_btn", "exit_btn", "autoplay_btn", "review_btn")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -555.0
offset_top = -17.5
offset_bottom = 17.5
grow_horizontal = 0
grow_vertical = 2
alignment = 1
script = ExtResource("6_m5nin")
continue_btn = NodePath("继续")
replay_btn = NodePath("重新播放")
save_btn = NodePath("存档")
load_btn = NodePath("读档")
record_btn = NodePath("记录")
exit_btn = NodePath("退出")
autoplay_btn = NodePath("自动")
review_btn = NodePath("回顾")

[node name="继续" type="Button" parent="KonadoUI/DialogueInterface/ActionButtons/ActionsContainer" unique_id=912238084]
custom_minimum_size = Vector2(90, 35)
layout_mode = 2
theme_override_colors/font_color = Color(0.8646751, 0.86467516, 0.8646751, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_m5nin")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_r5ho2")
theme_override_styles/hover = SubResource("StyleBoxTexture_vp4la")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ytbee")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ky1ed")
text = "继续"

[node name="重新播放" type="Button" parent="KonadoUI/DialogueInterface/ActionButtons/ActionsContainer" unique_id=1771917949]
custom_minimum_size = Vector2(90, 35)
layout_mode = 2
theme_override_colors/font_color = Color(0.8646751, 0.86467516, 0.8646751, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_m5nin")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_r5ho2")
theme_override_styles/hover = SubResource("StyleBoxTexture_vp4la")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ytbee")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ky1ed")
text = "重新播放"

[node name="存档" type="Button" parent="KonadoUI/DialogueInterface/ActionButtons/ActionsContainer" unique_id=37892135]
custom_minimum_size = Vector2(90, 35)
layout_mode = 2
theme_override_colors/font_color = Color(0.8646751, 0.86467516, 0.8646751, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_m5nin")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_r5ho2")
theme_override_styles/hover = SubResource("StyleBoxTexture_vp4la")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ytbee")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ky1ed")
toggle_mode = true
text = "存档"

[node name="读档" type="Button" parent="KonadoUI/DialogueInterface/ActionButtons/ActionsContainer" unique_id=113153670]
custom_minimum_size = Vector2(90, 35)
layout_mode = 2
theme_override_colors/font_color = Color(0.8646751, 0.86467516, 0.8646751, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_m5nin")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_r5ho2")
theme_override_styles/hover = SubResource("StyleBoxTexture_vp4la")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ytbee")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ky1ed")
toggle_mode = true
text = "读档"

[node name="记录" type="Button" parent="KonadoUI/DialogueInterface/ActionButtons/ActionsContainer" unique_id=527455984]
custom_minimum_size = Vector2(90, 35)
layout_mode = 2
theme_override_colors/font_color = Color(0.8646751, 0.86467516, 0.8646751, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_m5nin")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_r5ho2")
theme_override_styles/hover = SubResource("StyleBoxTexture_vp4la")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ytbee")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ky1ed")
text = "记录"

[node name="退出" type="Button" parent="KonadoUI/DialogueInterface/ActionButtons/ActionsContainer" unique_id=641082544]
custom_minimum_size = Vector2(90, 35)
layout_mode = 2
theme_override_colors/font_color = Color(0.8646751, 0.86467516, 0.8646751, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_m5nin")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_r5ho2")
theme_override_styles/hover = SubResource("StyleBoxTexture_vp4la")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ytbee")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ky1ed")
text = "退出"

[node name="自动" type="Button" parent="KonadoUI/DialogueInterface/ActionButtons/ActionsContainer" unique_id=735250380]
custom_minimum_size = Vector2(90, 35)
layout_mode = 2
theme_override_colors/font_color = Color(0.8646751, 0.86467516, 0.8646751, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_m5nin")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_r5ho2")
theme_override_styles/hover = SubResource("StyleBoxTexture_vp4la")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ytbee")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ky1ed")
toggle_mode = true
text = "自动播放"

[node name="回顾" type="Button" parent="KonadoUI/DialogueInterface/ActionButtons/ActionsContainer" unique_id=344384069]
custom_minimum_size = Vector2(90, 35)
layout_mode = 2
theme_override_colors/font_color = Color(0.8646751, 0.86467516, 0.8646751, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_m5nin")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_r5ho2")
theme_override_styles/hover = SubResource("StyleBoxTexture_vp4la")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ytbee")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ky1ed")
toggle_mode = true
text = "回顾"

[node name="SaveLoad" type="Control" parent="KonadoUI" unique_id=1232795751]
unique_name_in_owner = true
visible = false
anchors_preset = 0
script = ExtResource("4_m5nin")

[node name="Panel" type="Panel" parent="KonadoUI/SaveLoad" unique_id=2128743651]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"Background"

[node name="ScrollContainer" type="ScrollContainer" parent="KonadoUI/SaveLoad/Panel" unique_id=659003428]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="KonadoUI/SaveLoad/Panel/ScrollContainer" unique_id=1831805904]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 100

[node name="RootSlotContainer" type="BoxContainer" parent="KonadoUI/SaveLoad/Panel/ScrollContainer/MarginContainer" unique_id=816798458]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 2
theme_override_constants/separation = 50
vertical = true

[node name="KonadoAudioInterface" type="Node2D" parent="." unique_id=1896821847 node_paths=PackedStringArray("bgm_player", "voice_player", "sound_effect_player")]
script = ExtResource("4_gd2ll")
bgm_player = NodePath("BgmPlayer")
voice_player = NodePath("VoicePlayer")
sound_effect_player = NodePath("SoundEffectPlayer")

[node name="BgmPlayer" type="AudioStreamPlayer" parent="KonadoAudioInterface" unique_id=1295733151]

[node name="VoicePlayer" type="AudioStreamPlayer" parent="KonadoAudioInterface" unique_id=704065821]

[node name="SoundEffectPlayer" type="AudioStreamPlayer" parent="KonadoAudioInterface" unique_id=743748580]

[node name="KonadoErrorToolTip" type="ColorRect" parent="." unique_id=1152539807]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08627451, 0.08627451, 0.08627451, 0.9137255)

[node name="MarginContainer" type="MarginContainer" parent="KonadoErrorToolTip" unique_id=531884272]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 66
theme_override_constants/margin_top = 66
theme_override_constants/margin_right = 66
theme_override_constants/margin_bottom = 66

[node name="ErrorText" type="Label" parent="KonadoErrorToolTip/MarginContainer" unique_id=735988474]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 1
autowrap_mode = 3

[node name="Skip" type="Button" parent="KonadoErrorToolTip" unique_id=283867520]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 42
text = "Skip this error..."
